# CodexAction

./: .gitignore  AGENTS.md  Load-WeaveSessionContext.ps1  README.md  Setup-WeaveSession.ps1
.codex/: config.toml  weave-session-context.md
.codex/environments/: environment.toml
Expertises/NewsCaster/scripts/tests/: test_main.py
NewsCaster/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLOUD.md  README.md  ROUTINE_PROMPT.md  SKILL.md  automation.toml  bootstrap.sh  pyproject.toml
NewsCaster/scripts/: bootstrap.sh  codex_cloud_setup.sh  main.py
NewsCaster/scripts/adapters/mail/: gmail_api_mail_gateway.py
NewsCaster/scripts/adapters/state/: json_state_store.py
NewsCaster/scripts/domain/: config.py
NewsCaster/scripts/tests/: test_main.py
NewsCaster/scripts/tests/adapters/: test_gmail_api_mail_gateway.py
NewsCaster/scripts/tests/domain/: test_config.py  test_digest.py  test_models.py
NewsCaster/scripts/tests/usecases/: test_fetch_and_filter.py  test_run_daily_digest.py  test_send_digest_email.py
NewsCaster/scripts/usecases/: ports.py  run_daily_digest.py  send_digest_email.py
pet-runs/meguru/: imagegen-jobs.json  pet_request.json
pet-runs/meguru/prompts/: base-pet.md
pet-runs/meguru/prompts/rows/: failed.md  idle.md  jumping.md  review.md  running-left.md  running-right.md  running.md  waiting.md  waving.md
pet-runs/weave/: imagegen-jobs.json  pet_request.json
pet-runs/weave/final/: validation.json
pet-runs/weave/frames/: frames-manifest.json
pet-runs/weave/prompts/: base-pet.md
pet-runs/weave/qa/: review.json
(+13 files in other folders)
